[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
httparse = "1.8.0"
h3 = { path = "../h3/h3" }
h3-quinn = { path = "../h3/h3-quinn" }
log = "0.4.17"
log4rs = "1.2.0"
quinn = "0.9.3"
rustls = "0.20.7"
rustls-pemfile = "1.0.1"
tokio = { version = "1.23.0", features = ["fs", "io-util", "rt-multi-thread", "macros"]  }
