[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bytes = "1.3.0"
derive_builder = "0.12.0"
futures = "0.3.25"
http = "0.2.8"
h3 = { path = "../h3/h3" }
h3-quinn = { path = "../h3/h3-quinn" }
log = "0.4.17"
log4rs = "1.2.0"
quinn = { version = "0.8", default-features = false, features = ["tls-rustls", "ring"] }
rustls = "0.20.7"
rustls-pemfile = "1.0.1"
tokio = { version = "1.23.0", features = ["fs", "io-util", "rt-multi-thread", "macros"]  }
