[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
log = "0.4.17"
log4rs = "1.2.0"
quinn = "0.9.3"
rustls = "0.20.7"
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros"]  }
url = "2.3.1"
