[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
futures = "0.3.25"
log = "0.4.17"
log4rs = "1.2.0"
quinn = { version = "0.8", default-features = false, features = ["tls-rustls", "ring"] }
rustls = "0.20.7"
rustls-native-certs = "0.6.2"
tokio = { version = "1.23.0", features = ["fs", "io-util", "rt-multi-thread", "macros"]  }
url = "2.3.1"
